[JATP-19, JATP-42] Add Register_Endpoint and DB connection setup on Backend

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=DatavizDB;Username=postgres;Password="
+  },
+  "Jwt": {
+    "Key": "ThisIsJwtKeyForDataVizManagerProject",
+    "Issuer": "DataVizManager",
+    "Audience": "DataVizManagerUsers",
+    "ExpireMinutes": 60
+  }
 }
