[JATP-28] Add List-Datasets-UI-API

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=DatavizDB;Username=postgres;Password="
   },
   "Jwt": {
-    "Key": "ThisIsJwtKeyForDataVizManagerProject",
+    "Key": "ThisIsASuperSecretKeyAtLeast32CharsLong!",
     "Issuer": "DataVizManager",
     "Audience": "DataVizManagerUsers",
     "ExpireMinutes": 60
